// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Page 1`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-headerRow"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-header"
        >
          <h2
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-title"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                This is Title
              </span>
            </span>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Remark __AMIS_COMPONENT_CLASS_PREFIX__Remark--warning"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Remark-icon"
              >
                <icon-mock
                  class="icon-question-mark"
                  icon="question-mark"
                />
              </span>
            </div>
          </h2>
          <small
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-subTitle"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                This is SubTitle
              </span>
            </span>
          </small>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              This is toolbar
            </span>
          </span>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            This is body
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page classNames 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page __AMIS_COMPONENT_CLASS_PREFIX__Page--withSidebar __AMIS_COMPONENT_CLASS_PREFIX__Page--asideSticky __AMIS_COMPONENT_CLASS_PREFIX__Page--leftAside"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-aside __AMIS_COMPONENT_CLASS_PREFIX__Page-aside--withWidth aside-class-name"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view __AMIS_COMPONENT_CLASS_PREFIX__Page-asideTplWrapper"
      >
        <span>
          This is aside
        </span>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-headerRow"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-header header-class-name"
          >
            <h2
              class="__AMIS_COMPONENT_CLASS_PREFIX__Page-title"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  This is Title
                </span>
              </span>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Remark __AMIS_COMPONENT_CLASS_PREFIX__Remark--warning"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Remark-icon"
                >
                  <icon-mock
                    class="icon-question-mark"
                    icon="question-mark"
                  />
                </span>
              </div>
            </h2>
            <small
              class="__AMIS_COMPONENT_CLASS_PREFIX__Page-subTitle"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  This is SubTitle
                </span>
              </span>
            </small>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar toolbar-class-name"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                This is toolbar
              </span>
            </span>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body body-class-name"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              This is body
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            this is feedback
          </span>
        </span>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog default 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog default 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <form
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer default 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Drawer __AMIS_COMPONENT_CLASS_PREFIX__Drawer--right __AMIS_COMPONENT_CLASS_PREFIX__Drawer--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-content in"
    >
      <a
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-close"
      >
        <icon-mock
          class="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-body"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay in"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer default 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Drawer __AMIS_COMPONENT_CLASS_PREFIX__Drawer--right __AMIS_COMPONENT_CLASS_PREFIX__Drawer--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-content in"
    >
      <a
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-close"
      >
        <icon-mock
          class="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-body"
        role="dialog-body"
      >
        <form
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi error show Message 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Alert __AMIS_COMPONENT_CLASS_PREFIX__Alert--danger"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                Internal Error
              </div>
            </div>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Alert-close"
              type="button"
            >
              <icon-mock
                class="icon icon-close"
                icon="close"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 1`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 1
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 2`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 2
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <form
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span />
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Drawer __AMIS_COMPONENT_CLASS_PREFIX__Drawer--right __AMIS_COMPONENT_CLASS_PREFIX__Drawer--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-content in"
    >
      <a
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-close"
      >
        <icon-mock
          class="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-body"
        role="dialog-body"
      >
        <form
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span />
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-toolbar"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay in"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay in"
            data-testid="spinner"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
            />
          </div>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              The variable value is 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initData 1`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 1
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initFetchOn trigger initApi fetch when condition becomes ture 1`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 6
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 1`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 5
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 2`] = `
<div
  class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
  data-amis-theme="cxd"
>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
        role="page-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The variable value is 6
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
